Remove static layout, Fix gap in mobile layout by removing the height of container.

--- a/src/app/components/css/styles.css
+++ b/src/app/components/css/styles.css
@@ -11,7 +11,7 @@
 .container, .container_6 {
     margin: 0;
     display: grid;
-    min-height: 100vh;
+    
 }
 .container_6 {
     grid-template-rows: auto auto 100px auto 280px 40px;
@@ -29,11 +29,6 @@
 
 .grid1m, .grid1m_sub, .grid1m_sub_none {
     display: none;
-}
-
-.grid1 {
-    display: flex;
-    flex-direction: column;
 }
 
 .menuTitle {
