--- a/src/app/components/css/styles_desktop.css
+++ b/src/app/components/css/styles_desktop.css
@@ -3,7 +3,7 @@
 .container {
     grid-template-columns: 180px 3fr 280px;
     grid-template-rows: 100px auto 30px;
-    justify-content: space-between;
+    min-height: 100vh;
 }
 
 
@@ -26,7 +26,8 @@
 /* Menu */
 .grid1 {
     grid-row: 1 / span 3;
-    
+    display: flex;
+    flex-direction: column;    
 }
 .logo {
     width: 100%;
